Continue to struggle with the file transfer